Adding card from column to group